= RSpec Changelog

== Version 1.0.2
This is just to align the version numbers in rspec and rspec_on_rails.

== Version 1.0.1
This is a maintenance release with mostly cleaning up, and one minor enhancement -
Modules are automatically included when described directly.

* Renamed Spec::Rails' rspec_resource generator to rspec_scaffold.
* Removed Spec::Rails' be_feed matcher since it's based on assert_select_feed which is not part of Rails (despite that docs for assert_select_encoded says it is).
* describe(SomeModule) will include that module in the examples. Like for Spec::Rails helpers, but now also in core.
* Header in HTML report will be yellow instead of red if there is one failed example
* Applied [#10951] Odd instance variable name in rspec_model template (patch from Kyle Hargraves)
* Improved integration with autotest (Patches from Ryan Davis and David Goodland)
* Some small fixes to make all specs run on JRuby.

== Version 1.0.0
The stake in the ground release. This represents a commitment to the API as it is. No significant
backwards compatibility changes in the API are expected after this release.

* Fixed [#10923] have_text matcher does not support should_not
* Fixed [#10673] should > and should >= broken
* Applied [#10921] Allow verify_rcov to accept greater than threshold coverage %'s via configuration
* Applied [#10920] Added support for not implemented examples (Patch from Chad Humphries and Ken Barker)
* Patch to allow not implemented examples.  This works by not providing a block to the example. (Patch from Chad Humphries, Ken Barker)
* Yanked support for Rails 1.1.6 in Spec::Rails
* RSpec.tmbundle uses CMD-SHIFT-R to run focused examples now.
* Spec::Rails now bundles a spec:rcov task by default (suggestion from Kurt Schrader)
* Fixed [#10814] Runner loads shared code, test cases require them again
* Fixed [#10753] Global before and after
* Fixed [#10774] Allow before and after to be specified in config II