@@ -5,8 +5,8 @@ module Spec
       MINOR  = 0
       TINY   = 2
       RELEASE_CANDIDATE = nil
-      
-      # RANDOM_TOKEN: 0.378125753552199
+
+      # RANDOM_TOKEN: 0.291765925825509
       REV = "$LastChangedRevision$".match(/LastChangedRevision: (\d+)/)[1]
 
       STRING = [MAJOR, MINOR, TINY].join('.')
